--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Godlewski<br>Mateusz</h1>
-						<p>Python Developer &nbsp;&bull;&nbsp; Music Producer &nbsp;&bull;&nbsp; Video Editor</p>
+						<p>Python Developer &nbsp;&bull;&nbsp; Music Producer</p>
 						<nav>
 							<ul>
 								<li><a href="https://github.com/Mateusz-Godlewski" class="icon brands fa-github"><span class="label">Github</span></a></li>
